--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "newnodemodule",
+  "name": "thread",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Conor",
